fix: issue with rounded up button for textarea scrollbar

--- a/packages/components/src/components/textarea/textarea.scss
+++ b/packages/components/src/components/textarea/textarea.scss
@@ -43,10 +43,7 @@
 		@extend %resize-textarea;
 		@extend %scrollbar;
 
-
-		&:not(:read-only, :disabled) {
-			overflow-y: scroll;
-		}
+		overflow-y: scroll;
 
 		// we don't have icons in textarea so we can overwrite it here
 		padding-block: variables.$db-spacing-fixed-xs
